--- a/kube/aggregator/service.yaml
+++ b/kube/aggregator/service.yaml
@@ -1,14 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: verbs-service
+  name: aggregator-service
   namespace: app
 spec:
   selector: 
-    app: verbs
+    app: aggregator
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 3000
+      targetPort: 3002
+      nodePort: 30082  # Exposes the service externally on this port
 
   type: LoadBalancer
