--- a/kube/verbs/deployment.yaml
+++ b/kube/verbs/deployment.yaml
@@ -19,3 +19,9 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 3000
+          resources:
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
+          securityContext:
+            readOnlyRootFilesystem: true
