--- a/kube/web/deployment.yaml
+++ b/kube/web/deployment.yaml
@@ -19,3 +19,7 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 80
+          resources:
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
